--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -184,7 +184,7 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=402.000 Y=1263.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -202,7 +202,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/LABORATORIO 211/Documents/JC 4 semestre/repositorios/deadpool_Emilia/Content/ThirdPersonBP/Maps
+UNR=../../../../../../Users/Emilia/Documents/Amerike/Semestre 6/optativa engines/urban_4/deadpool_Emilia/Content/ThirdPersonBP/Maps
 BRUSH=../../../../../../Users/LABORATORIO 211/Documents/Emilia/UE4_CH_Integration/Content/
 FBX=../../../../../../Users/LABORATORIO 211/Documents/Emilia/UE4_CH_Integration/Content/
 FBXAnim=../../../../../../Users/LABORATORIO 211/Documents/Emilia/UE4_CH_Integration/Content/
@@ -1112,6 +1112,8 @@ PhysicsAssetEditor.TimeStamp=2023.08.28-23.06.55
 PhysicsAssetEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2023.08.28-23.06.53
 ExternalImagePicker.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.08.19-19.32.58
+SequencerWidgets.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1638,18 +1640,42 @@ K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Characters/BS_Deadpool
-MRUItem2=/Game/Characters/deadpool
-MRUItem3=/Game/Characters/ABP_Dradpool
-MRUItem4=/Game/Characters/deadpool_PhysicsAsset
+MRUItem1=/Game/Characters/nav_jump_End
+MRUItem2=/Game/Characters/ABP_Dradpool
+MRUItem3=/Game/Characters/deadpool
+MRUItem4=/Game/Characters/BS_Deadpool
+MRUItem5=/Game/Characters/deadpool_PhysicsAsset
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[3].InputHandlers\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" \"Object.AddOns.Extensions\" \"Object.AddOns.Extensions.Extensions[0]\" \"Object.AddOns.Extensions.Extensions[0].InputHandlers\" \"Object.AddOns.Extensions.Extensions[1]\" \"Object.AddOns.Extensions.Extensions[1].InputHandlers\" "
 NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" "
 DeveloperSettings=
@@ -1661,6 +1687,7 @@ InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[32]\" "
 /Game/Characters/ABP_Dradpool.ABP_Dradpool=1
 /Game/Characters/deadpool_PhysicsAsset.deadpool_PhysicsAsset=1
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/Characters/nav_jump_Loop.nav_jump_Loop=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
